Fix font-family on Safari

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,6 +48,10 @@ html .container {
 	}
 }
 
+body {
+	font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	letter-spacing: -.02em;
 }
